Estrutura geral e arquivos JS prontos

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </div>
                 </section>
 
-                <nav class="navbar navbar-default navbar-static-top">
+                <nav class="navbar navbar-default">
                     <div class="container">
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -60,32 +60,7 @@
                 </nav>
             </header>
 
-            <div class="row">
-                <div class="col-md-4">
-                    <img src="assets/img/aging-potion.png" alt="" class="img-responsive">
-                    <p><span></span></p>
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/img/bulgeye-potion.png" alt="" class="img-responsive">
-                    <p><span></span></p>
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/img/dragon-tonic.png" alt="" class="img-responsive">
-                    <p><span></span></p>
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/img/love-potion.png" alt="" class="img-responsive">
-                    <p><span></span></p>
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/img/polyjuice-potion.png" alt="" class="img-responsive">
-                    <p><span></span></p>
-                </div>
-                <div class="col-md-4">
-                    <img src="assets/img/sleeping-draught.png" alt="" class="img-responsive">
-                    <p><span></span></p>
-                </div>
-            </div>
+            <ul class="row" id="lista-produtos"></ul>
 
             <footer>
                 <section>
@@ -114,6 +89,10 @@
                     </form>
                 </section>
             </footer>
+
+            <div class="lightbox">
+                <div class="lightbox-content"></div>
+            </div>
         </main>
         <script src="src/js/script.js"></script>
     </body>
