--- a/index.html
+++ b/index.html
@@ -9,141 +9,147 @@
   <title>Start-Here</title>
 </head>
 
-<body>
-  <main class="container-fluid">
-    <header>
-      <div class="jumbotron">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-3">
-              <h1>Merlin's Potions</h1>
-              <span>fine potions since 1026</span>
+<body class="container-fluid">
+
+  <header class="row">
+    <div class="jumbotron">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <h1>Merlin's <span>Potions</span></h1>
+            <h2>fine potions since 1026</h2>
+          </div>
+          <div class="col-md-3 visible-md visible-lg">
+            <div class="form-group">
+              <input class="form-control" type="text" placeholder="Search our stock">
             </div>
-            <div class="col-md-3">
-              <div class="form-group">
-                <input class="form-control" type="text" placeholder="Search our stock">
-              </div>
-            </div>
-            <div class="col-md-3">
-              <p>Free shipping on orders over $50</p>
-            </div>
-            <div class="col-md-3">
-              <i>cart</i>
-              <span>BAG:1</span>
-            </div>
+          </div>
+          <div class="col-md-3 free visible-md visible-lg">
+            <p>Free shipping </p>
+            <span>on orders over $50</span>
+          </div>
+          <div class="col-md-3 cart">
+            <p>BAG:</p>
+            <span>1</span>
           </div>
         </div>
       </div>
+    </div>
 
-      <nav class="navbar navbar-default">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-              aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Potions
-                  <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ingredients
-                  <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Books
-                  <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Supplies
-                  <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                </ul>
-              </li>
-              <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Charms
-                  <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                </ul>
-              </li>
-              <li class="active"><a>Clearance!</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <li>
-                <a>Sign in</a>
-              </li>
-              <li>
-                <a>Sign up</a>
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+            aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
         </div>
-      </nav>
-    </header>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Potions
+                <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Ingredients
+                <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Books
+                <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Supplies
+                <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Charms
+                <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+              </ul>
+            </li>
+            <li><a href="#">Clearance!</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li>
+              <a>Sign in</a>
+            </li>
+            <li>
+              <a>Sign up</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
-    <ul class="row" id="lista-produtos"></ul>
-
-    <footer class="row">
-      <section class="col-md-6">
-        <ul class="menu-footer">
-          <li>company</li>
-          <li>contact us</li>
-          <li>shipping</li>
-          <li>returns</li>
-          <li>carrers</li>
-        </ul>
-        <ul class="social">
-          <li>
-            <img src="assets/icons/facebook.svg">
-          </li>
-          <li>
-            <img src="assets/icons/twitter.svg">
-          </li>
-          <li>
-            <img src="assets/icons/pinterest.svg">
-          </li>
-          <li>
-            <img src="assets/icons/tumblr.svg">
-          </li>
-          <li>
-            <img src="assets/icons/googleplus.svg">
-          </li>
-        </ul>
-        <span>&copy; 2017 Merlin's Potions. All Rights Reserved</span>
-      </section>
-      <section class="col-md-6 newsletter">
-        <p class="italic">Sign up for our Newsletter</p>
-        <p>Sign up for our newsletter &amp; get exclusive discounts!</p>
-        <form class="form-inline">
-          <div class="form-group">
-            <input class="form-control "type="text" placeholder="Enter your email">
-            <button type="submit" class="btn btn-default">submit</button>
-          </div>
-        </form>
-      </section>
-    </footer>
-
-    <div class="lightbox">
-      <div class="lightbox-content"></div>
+  <main class="row">
+    <div class="col-md-12">
+      <h1>Potions</h1>
+      <ul id="lista-produtos"></ul>
     </div>
   </main>
+
+  <footer class="row">
+    <section class="col-md-6 col-sm-12">
+      <ul class="menu-footer visible-md visible-lg">
+        <li>company</li>
+        <li>contact us</li>
+        <li>shipping</li>
+        <li>returns</li>
+        <li>carrers</li>
+      </ul>
+      <ul class="social">
+        <li>
+          <img src="assets/icons/facebook.svg">
+        </li>
+        <li>
+          <img src="assets/icons/twitter.svg">
+        </li>
+        <li>
+          <img src="assets/icons/pinterest.svg">
+        </li>
+        <li>
+          <img src="assets/icons/tumblr.svg">
+        </li>
+        <li>
+          <img src="assets/icons/googleplus.svg">
+        </li>
+      </ul>
+      <span>&copy; 2017 Merlin's Potions. All Rights Reserved</span>
+    </section>
+    <section class="col-md-6 col-sm-12 newsletter">
+      <p class="italic">Sign up for our Newsletter</p>
+      <p>Sign up for our newsletter &amp; get exclusive discounts!</p>
+      <form class="form-horizontal">
+        <div class="form-group">
+          <input class="form-control "type="text" placeholder="Enter your email">
+          <button type="submit" class="btn btn-default">submit</button>
+        </div>
+      </form>
+    </section>
+  </footer>
+
+  <div class="lightbox">
+    <div class="lightbox-content"></div>
+  </div>
+
   <script src="src/js/js-dependences.js"></script>
   <script src="src/js/script.js"></script>
 </body>
