Correções gerais e mobile

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p>Free shipping </p>
             <span>on orders over $50</span>
           </div>
-          <div class="col-md-3 cart">
+          <div class="col-md-3 cart visible-md visible-lg">
             <p>BAG:</p>
             <span>1</span>
           </div>
@@ -132,7 +132,7 @@
           <img src="assets/icons/googleplus.svg">
         </li>
       </ul>
-      <span>&copy; 2017 Merlin's Potions. All Rights Reserved</span>
+      <span class="visible-md visible-lg">&copy; 2017 Merlin's Potions. All Rights Reserved</span>
     </section>
     <section class="col-md-6 col-sm-12 newsletter">
       <p class="italic">Sign up for our Newsletter</p>
@@ -143,6 +143,7 @@
           <button type="submit" class="btn btn-default">submit</button>
         </div>
       </form>
+      <span class="copyright visible-xs visible-sm clear">&copy; 2017 Merlin's Potions. All Rights Reserved</span>
     </section>
   </footer>
 
